drumkv1 - an old-school drum-kit sampler
----------------------------------------

ChangeLog


GIT HEAD

- Small fixes to LV2.ttl (pull-request by Hanspeter Portner aka.
  ventosus, thanks).
- MIDI Controllers/Programss is now an optional feature on the
  LV2 plugin forms, as some LV2 hosts might enforce the purity
  restriction to input control ports as being absolutely read-
  only parameter values from a plugin's instance perspective.
- MIDI Controller mapping/learn is now possible on all parameter
  control knobs; with global configuration also avaiable on the
  Help/Configure dialog. (EXPERIMENTAL)
- French (fr) translation line to desktop file added (by Olivier
  Humbert, thanks).


0.6.3  2015-05-09  A sixth official beta.

- Sample file drag-and-drop support has been added to the note
  element list widget.
- Main widget layout changed as much to allow sampler display
  and element list to expand or grow vertically as needed.


0.6.2  2015-04-30  A fifth official beta.

- Sample file path mapping has been fixed for LV2 plugin state
  restoration, which were preventing Ardour to reload any of
  the saved session or preset sample files in particular.
- Custom knob/dial behavior mode options are now introduced:
  linear and angular (aka. radial) as far to avoid abrupt
  changes on first mouse click (still the default behavior).
- Fixed for some strict tests for Qt4 vs. Qt5 configure builds.


0.6.1  2015-03-09  A fourth official beta.

- Added application description as freedesktop.org's AppData.
- Introducing LV2 port-groups (as proposed by Amadeus Folego aka.
  badosu, thanks).
- Improved envelope widget nodes click-and-drag precision.
- Sample file drag-and-drop support has been added.
- Introducing a brand new user preference on eye-candy: cf.Help
  /Configure.../Options/Custom style theme (applies to the JACK
  stand-alone client only though).
- Envelope and filter now rendered with anti-aliased lines.